# irseny

./: .gitignore  .gitmodules  README.md  Visui.sln
Visui/: MainWindow.cs  Program.cs  Visui.csproj
Visui/Properties/: AssemblyInfo.cs
Visui/gtk-gui/: MainWindow.cs  gui.glade  gui.stetic
design/: virtual_device_interface.mm
lib/opencv/: .empty
lib/webpackages/: package.json
lib/webpackages/irseny.bootstrap/: package.json  testpage.html
maketools/: copylibs.bat  copylibs.sh
maketools/Extrack/: CMakeLists.txt  build.bat  build.sh  build_mingw.bat  build_msys.sh  build_nmake.bat  build_unix.sh  cmake_install.cmake
project/: Irseny.sln  Irseny.sln.wrongbrace  Irseny.workspace
project.legacy/: Irseny.sln
project.legacy/Extrack/: FTDummyWin.c  FTSupplyWin.c  Inject.h  InjectLin.c  Track.h
project.legacy/Irseny/: Irseny.Main.csproj
project.legacy/Irseny.Core/: Irseny.Core.csproj  MyClass.cs
project.legacy/Irseny.Main/: Irseny.Legacy.csproj
project.legacy/Irseny.Main/Iface/: IInterfaceFactory.cs  IInterfaceRegister.cs  InterfaceFactory.cs  InterfaceFactoryState.cs  SurfacePage.cs
project.legacy/Irseny.Main/Listing/: EquipmentUpdateArgs.cs
project.legacy/Irseny.Main/Log/: MessageEventArgs.cs
project.legacy/Irseny.Main/Tracking/: IPoseTracker.cs  P3PoseEstimator.cs  TrackerProperty.cs
project.legacy/Irseny.Main/Util/: ISharedRef.cs  ImageTools.cs  TextParseTools.cs
project.legacy/Irseny/Content/: ContentManager.cs
project.legacy/Irseny/Iface/: InterfaceRegister.cs
project.legacy/Irseny/Listing/: EquipmentManager.cs  EquipmentMaster.cs  EquipmentState.cs
project.legacy/Irseny/Log/: LogEntry.cs  MessageType.cs
project.legacy/Irseny/Properties/: AssemblyInfo.cs
project.legacy/Irseny/Tracking/: IObjectModel.cs  KeypointDetector.cs  PointLabeler.cs  SingleImageCapTracker.cs  TrackerSettings.cs
project.legacy/Irseny/Util/: SharedRef.cs  SharedRefCleaner.cs
project.legacy/Mycena/: ConfigProperties.cs  InterfaceNode.cs  TextParseTools.cs
project.legacy/Mycena/Gadgets/: IGadgetFactory.cs  ImageGadgetFactory.cs  RadioButtonGroupFactory.cs  TextBufferFactory.cs
project.legacy/Mycena/Properties/: AssemblyInfo.cs
project.legacy/Mycena/Stock/: InterfaceStock.cs  StockAccessConfig.cs
project.legacy/Mycena/Widgets/: AlignmentFactory.cs  BoxFactory.cs  ButtonFactory.cs  DrawingAreaFactory.cs  EntryFactory.cs  FrameFactory.cs  GridFactory.cs  IgnoreWidgetFactory.cs  ImageWidgetFactory.cs  MiscFactory.cs  RadioButtonFactory.cs  ScrolledWindowFactory.cs  SeparatorFactory.cs  SpinButtonFactory.cs  StaticWidgetFactory.cs  SwitchFactory.cs  TextViewFactory.cs  ToggleButtonFactory.cs  ViewportFactory.cs  WindowFactory.cs
project/Extrack/: CMakeLists.txt  FTTestWin.h  Inject.c  Inject.h  InjectLin.c  InjectLin.h  InjectTypes.h  InjectWin.c  InjectWin.h  Track.c  TrackTypes.h  consume.c  ft_client.c  fttypes.h  supply.c
project/Irseny/: Irseny.csproj  Irseny.csproj.working  Program.cs
project/Irseny.Core/: Irseny.Core.csproj
project/Irseny.Core/Inco/: Artf.cs  Ivj.cs
project/Irseny.Core/Listing/: EquipmentManager.cs  EquipmentMaster.cs  EquipmentState.cs  EquipmentUpdateArgs.cs
project/Irseny.Core/Log/: LogEntry.cs  LogManager.cs  MessageEventArgs.cs  MessageType.cs
project/Irseny.Core/Properties/: AssemblyInfo.cs
project/Irseny.Core/Sensors/: CaptureSystem.cs  EquipmentSettings.cs  ISensorBase.cs  ISensorObservable.cs  ISensorObserver.cs  SensorDataPacket.cs  SensorDataType.cs  SensorObservable.cs  SensorProperty.cs  SensorSettings.cs  SensorType.cs
project/Irseny.Core/Shared/: FrameRateAnalyzer.cs  IRasterImageBase.cs  RasterImagePixelFormat.cs
project/Irseny.Core/Tracking/: Cap3PointTracker.cs  CapAxis.cs  CapModel.cs  CapPosition.cs  CapTracker.cs  DetectionSystem.cs  IObjectModel.cs  IPoseTracker.cs  ISingleImageCapTracker.cs  ImageProcessedEventArgs.cs  KeypointDetector.cs  P3PoseEstimator.cs  PointLabeler.cs  PositionDetectedEventArgs.cs  SingleImageCapTracker.cs  TrackerProperty.cs  TrackerSettings.cs  TrackerVideoFrame.cs  (+1 more)
project/Irseny.Main/: Irseny.Main.csproj  ProfileActivator.cs  Program.cs  Program.cs.save
project/Irseny.Native/: Irseny.Native.cproj  Irseny.Native.project  Irseny.Native.vcxproj  Irseny.Native.vcxproj.filters  IrsenyExport.h  pch.h
project/Irseny.Native/maketools/: CMakeLists.txt  build_mingw.bat  build_msys.sh  build_nmake.bat  build_unix.sh  setup_vs16.bat
project/Irseny.Native/maketools/modules/: FindOpenCV.cmake
project/Irseny.Webfront/: .project  index.html  webfront.module.js
project/Mycena/: ConfigProperties.cs  IInterfaceNode.cs  IInterfaceRoot.cs  IWidgetRegister.cs  InterfaceFactory.cs  InterfaceNode.cs  InterfaceRoot.cs  Mycena.csproj  Mycena.csproj.working  TextParseTools.cs
research/: ft_client.c  shared_mem.cpp  tir_interface.cpp
resources/: .resroot
resources/gtk/: BindingTab.glade  CameraConfig.glade  CameraControl.glade  CameraControlBase.glade  CameraDisplay.glade  CameraImageBase.glade  CameraOutput.glade  CameraView.glade  CapBindingsDisplay.glade  CapBindingsView.glade  CapTrackingConfig.glade  CapTrackingDisplay.glade  CapTrackingView.glade  Config.glade  Control.glade  DeviceConfig.glade  Display.glade  FreetrackConfig.glade  Image.glade  InnerCameraControl.glade  KeyboardConfig.glade  Log.glade  Main.glade  Output.glade  OutputControl.glade  OutputDeviceBindings.glade  OutputDeviceControl.glade  OutputDeviceSignalBinding.glade  ProfileConfig.glade  TrackingConfig.glade  TrackingControl.glade  TrackingDisplay.glade  TrackingOutput.glade  TrackingView.glade  View.glade  VirtualKeyboardBindings.glade  VirtualKeyboardConfig.glade  VirtualKeyboardControl.glade  WebcamConfig.glade  WebcamDisplay.glade  (+3 more)
resources/gtk_new/: CameraControl.glade  OutputAssignmentControl.glade  OutputAssignmentElement.glade  OutputDeviceAssignment.glade  OutputDeviceControl.glade
resources/gtk_old/: CameraDisplay.glade  CameraOutputBase.glade  Log.glade  Main.glade  TrackingControl.glade  TrackingDisplay.glade  TrackingImage2.glade  TrackingOutput.glade
resources/profiles/: Default.xml
(+431 files in other folders)
