cmake_minimum_required(VERSION 2.8)

set(TRANSMITTER_NAME Extrack)
set(SUPPLIER_NAME Generate)
set(CONSUMER_NAME Tell)
project(${TRANSMITTER_NAME} C)
project(${SUPPLIER_NAME} C)
project(${CONSUMER_NAME} C)

set(PROJECT_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
include_directories(${PROJECT_SOURCE_DIR})

list(APPEND TRANSMITTER_SOURCES ft_client.c)
list(APPEND SUPPLIER_SOURCES supply.c)
list(APPEND CONSUMER_SOURCES consume.c)

add_library(${TRANSMITTER_NAME} SHARED ${TRANSMITTER_SOURCES})
add_executable(${SUPPLIER_NAME} ${SUPPLIER_SOURCES})
add_executable(${CONSUMER_NAME} ${CONSUMER_SOURCES})
